# Gim-IT-III-godina

./: .gitignore  prosti.c
Baze Podataka/Access/: Ucenik.mdb
Baze Podataka/SQL/: Knjige-Izdavaci.sql  SQL.md  markdown-en.md  piloti.sql  plaintext-en.txt
Baze Podataka/zastarelo/: Magacin.mdb  Mature.mdb
Objektno Orijentisano/300-tacaka/: 300-tacaka.sln  Form1.cs  Program.cs
Objektno Orijentisano/Boje/: Boje.sln  Form1.Designer.cs  Form1.cs  Program.cs
Objektno Orijentisano/Brod/: Form1.Designer.cs
Objektno Orijentisano/Dinamicke-Strukture/: Dinamicke-Strukture.csproj  Dinamicke-Strukture.sln  Form1.Designer.cs  Form1.cs
Objektno Orijentisano/Kuca/: Form1.Designer.cs  Form1.cs  Kuca.csproj  Program.cs
Objektno Orijentisano/Kvadrat/: Form1.cs  Kvadrat.csproj
Objektno Orijentisano/Pismeni1/: Class1.cs  Pismeni1.csproj
Objektno Orijentisano/Pravougaonici/: Pravougaonici.sln
Objektno Orijentisano/Tekstualni-Dokument/: Form1.Designer.cs  Form1.cs
Objektno Orijentisano/slovo-M/: Form1.Designer.cs  Form1.cs  slovo-M.sln
Primena/: octave.txt  test2.txt  test3.txt
Programiranje/: Bit-Manip-Skolski.c  Bit-Manip.c  Geometrija.c  Grafovi-Pismeni.c  Grafovi-Test.c  Grafovi.c  a.out  algebarski-algoritmi.c  algoritmi-za-brojeve.c  bit-manipulisanje.c  geometrijski-algoritmi.c  grafovi-remake.c  grafovi.c  string-algoritmi.c  test-10-10-2024.c  test-10-10-2024.c~
Takprog/: rec-u-rec.cpp
Takprog/study/: CMakeLists.txt
Takprog/study/cmake/: CMakeCache.txt  Makefile
Takprog/study/src/: auto-cout.cpp  checking_references.cpp  friend.cpp  mt2.cpp
(+348 files in other folders)
